# MosquitoBorneDisease

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  codecov.yml  makefile
src/: agent.cpp  agent.hpp  location.cpp  location.hpp  main.cpp  mosquito.hpp  nonparasite.cpp  nonparasite.hpp  simulation.cpp  simulation.hpp  world.cpp  world.hpp
src/util/: Vector.hpp
tests/: MbdTests.cpp  TestVector.cpp
